fix: adds relative positioning to footer so logo text aligns properly

--- a/scss/_sjc-footer.scss
+++ b/scss/_sjc-footer.scss
@@ -4,6 +4,7 @@ footer {
   padding: 30px 0 0;
   background-color: $navy;
   border: 0;
+  position: relative;
 
   .logo {
     display: inline-block;
