--- a/scss/_sjc-logo.scss
+++ b/scss/_sjc-logo.scss
@@ -21,7 +21,7 @@
 footer {
 
   .sjc-title {
-    position: absolute;
-    top: 52px;
+    position: relative;
+    top: -12px;
   }
 }
